# SpockEngine

./: .clang-format  .gitignore  .gitmodules  Blueprints.json  CMakeLists.txt  Doxygen.conf  Doxygen.conf.py  EditorConfiguration.yaml  EditorConfiguration__.yaml  README.md  TestProject.yaml  build_clean.bat  build_documentation.bat  build_runtime.bat  build_solution.bat  doxybook-config.json  editor.bat  example.vert  frag.spv  imgui.ini  test_fs.cpp
Programs/: CMakeLists.txt
Programs/BlueprintVulkan/: CMakeLists.txt
Programs/Bootstrap/: CMakeLists.txt  build_library.bat  build_solution.bat  copy_resources.bat
Programs/DelauneyTest/: CMakeLists.txt
Programs/Demo_2/: CMakeLists.txt
Programs/Editor/: CMakeLists.txt  Editor.sln  Main.cpp  build_library.bat  build_solution.bat
Programs/Editor__/: CMakeLists.txt  Main.cpp
Programs/RayTraceRenderer/: CMakeLists.txt
Programs/RayTracing/: CMakeLists.txt
Programs/TestComputeGraph/: CMakeLists.txt  README.md
Programs/TestCoreCLR/: CMakeLists.txt  DotNetLib.runtimeconfig.json
Programs/TestFPGA/: CMakeLists.txt
Programs/TestLua/: CMakeLists.txt
Programs/TestMaterialSystem/: CMakeLists.txt
Programs/TestMonoExfo/: CMakeLists.txt
Programs/TestOtdrProject/: CMakeLists.txt  EditorConfiguration.yaml  TestOtdrProject.yaml  build_local.py
Programs/TestProject/: CMakeLists.txt  EditorConfiguration.yaml  TestProject.yaml
Programs/TestSensorLoadFinal/: CMakeLists.txt
Programs/Test_Obj_Loader/: CMakeLists.txt
Shaders/: CMakeLists.txt
Shaders/Source/: Brdf.hpp  Material.hpp  PBRMeshShader.vert  ShadingData.hpp  ShadingModelLit.hpp  Shadow.vert  SurfaceShader.frag  SurfaceShadingCloth.hpp  SurfaceShadingStandard.hpp  SurfaceShadingSubsurface.hpp  Varying.hpp  copy.frag  prefilterenvmap.frag  ui_shader.vert  ui_shader_0.frag
Source/: CMakeLists.txt
Source/Core/: AssetFile.cpp  AssetFile.h  ColorFormat.h  Core.h  Definitions.cpp  Definitions.h  File.cpp  File.h  FileWatch.hpp  Logging.cpp  Logging.h  Memory.h  Promise.h  QuadTree.h  Resource.cpp  Resource.h  String.cpp  String.h  TextureData.cpp  TextureData.h  Timing.h  Types.h  Vector.h
Source/Cuda/: CudaAssert.h  CudaBuffer.h  MemoryPool.cu  MultiTensor.cu  PointerView.h  Texture2D.cu
Source/DotNet/: Class.cpp  Class.h  DotNetClass.cpp  DotNetClass.h  DotNetInstance.cpp  DotNetMethod.cpp  DotNetMethod.h  DotNetRuntime.cpp  DotNetRuntime.h  EntityRegistry.cpp  EntityRegistry.h  Instance.cpp  Instance.h  InternalCalls.cpp  InternalCalls.h  InteropCalls.cpp  InteropCalls.h  Method.cpp  Method.h  Runtime.cpp  Runtime.h  TypeReflection.h  Typedefs.h  Utils.cpp  Utils.h
Source/Editor/: BaseEditorApplication.cpp  BaseEditorApplication.h  ContentBrowser.cpp  ContentBrowser.h  EditorWindow.cpp  EditorWindow.h  MaterialCreator.cpp  MaterialCreator.h  MaterialEditor.cpp  MaterialEditor.h  PopupWindow.cpp  PopupWindow.h  SceneElementEditor.cpp  SceneElementEditor.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Source/Engine/: Engine.cpp  Engine.h
Source/EnvironmentSampler/: EnvironmentSampler.cpp
Source/Graphics/: API.cpp  API.h  Sampler2D.cpp  Sampler2D.h  Texture2D.cpp  Texture2D.h  VkBuffer.cpp  VkBuffer.h  VkGpuBuffer.cpp  VkGpuBuffer.h  VkRenderTarget.cpp  VkRenderTarget.h  VkSampler2D.cpp  VkSampler2D.h  VkTexture2D.cpp  VkTexture2D.h
Source/Hosting/: CMakeLists.txt  CoreCLRHost.cpp  coreclrhost.h  corerun.cpp  corerun.hpp  dotenv.cpp  dotenv.hpp
Source/Launch/: CoreCLRHost.cpp  CoreCLRHost.h  Delegates.cpp  Delegates.h  EditorMain.cpp  Functions.h  OtdrMain.cpp  OtdrWindow.cpp  OtdrWindow.h
Source/LidarSensorModel/: Components.h  EnvironmentSampler.cpp  EnvironmentSampler.h  ModelArchive.cpp  ModelArchive.h  ModelBuilder.h  SensorControllerBase.cpp  SensorControllerBase.h  SensorDeviceBase.cpp  SensorDeviceBase.h  SensorModelBase.cpp  SensorModelBase.h
Source/Mono/: EntityRegistry.cpp  EntityRegistry.h  InternalCalls.cpp  InternalCalls.h  Manager.cpp  Manager.h  MonoRuntime.cpp  MonoRuntime.h  MonoScriptClass.cpp  MonoScriptClass.h  MonoScriptEngine.cpp  MonoScriptEngine.h  MonoScriptInstance.cpp  MonoScriptInstance.h  MonoScriptMethod.cpp  MonoScriptMethod.h  MonoScriptUtils.cpp  MonoTypedefs.h  TypeReflection.h
Source/OtdrEditor/: AcquisitionData.cpp  AcquisitionData.h  BaseOtdrApplication.cpp  BaseOtdrApplication.h  ContentBrowser.cpp  Enums.cpp  Enums.h  EventOverview.cpp  EventOverview.h  IOlmDiffDocument.cpp  IOlmDiffDocument.h  IOlmDocument.cpp  IOlmDocument.h  LinkElementTable.cpp  LinkElementTable.h  LinkElementTable0.cpp  LinkElementTable0.h  LinkElementTracePlot.cpp  LinkElementTracePlot.h  MaterialCreator.cpp  MaterialEditor.h  MeasurementOverview.cpp  MeasurementOverview.h  MonoClassHierarchy.cpp  MonoClassHierarchy.h  MultPulseEventTable.cpp  MultiPulseEventTable.cpp  MultiPulseEventTable.h  OtdrWindow.cpp  OtdrWindow.h  SceneElementEditor.cpp  SceneElementEditor.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TestFailResultTable.cpp  TestFailResultTable.h  Workspace.cpp  Workspace.h
Source/OtdrScene/: OtdrScene.cpp  OtdrScene.h
Source/OtdrScene__/: OtdrScene.h
Source/Plotting/: ColourMap.h  ColourMap_Lists.h  Figure.cpp  Figure.h  GraphVisual.h  Scale.h  VisualModel.h  colour.h  histo.h  mathconst.h  number_type.h  tools.h  vec.h  vvec.h
Source/ProcessingNodes/: ElectronicCrosstalkWaveformKernels.cu  ElectronicCrosstalkWaveformKernels.h  ElectronicCrosstalkWaveforms.cpp  ElectronicCrosstalkWaveforms.h  FPGA.cpp  FPGA.h  FPGAConfiguration.h  FPGAKernels.cu  HitRecordProcessor.cpp  (+8 more)
Tests/: CMakeLists.txt  TestUtils copy.h  TestUtils.cpp  TestUtils.h  Test_AbstractTexture.cpp  Test_ComputationScope.cpp  Test_ConfigurationReader.cpp  Test_CudaBuffer.cpp  Test_CudaTexture.cpp  Test_EntityRegistry.cpp  Test_EnvironmentSampler.cpp  Test_FPGA_Model.cpp  Test_MonoScripting.cpp  Test_Scripting.cpp  Test_SensorAcquisitionData.cpp  Test_SensorAssetParsing.cpp  Test_SensorAssets.cpp  Test_SensorComponentParsing.cpp  Test_SensorConfiguration.cpp  Test_SensorDefinitionParsing.cpp  Test_SensorModel.cpp  WfShortMockData.h
(+1157 files in other folders)
