cmake_minimum_required(VERSION 3.20)
project(LTSimulationEngineExamples LANGUAGES CUDA CXX)

set(CMAKE_CXX_STANDARD 17)

# add_subdirectory(Demo_2)
# add_subdirectory(RayTracing)
# add_subdirectory(TestLua)
# add_subdirectory(TestComputeGraph)
# add_subdirectory(TestComputeGraph)
# add_subdirectory(Editor)
