cmake_minimum_required(VERSION 3.20)
project(LTSimulationEngineExamples LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

# add_subdirectory(RayTracingVulkan)
# add_subdirectory(RayTraceRenderer)
# add_subdirectory(Test_Obj_Loader)

# add_subdirectory(Demo_2)
# add_subdirectory(RayTracing)
# add_subdirectory(TestLua)
# add_subdirectory(TestMonoExfo)
# add_subdirectory(TestComputeGraph)
# add_subdirectory(TestComputeGraph)
# add_subdirectory(Editor)
